k8s/00-project.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-mesh-demo
  labels:
    istio-injection: enabled
