k8s/21-istio-traffic.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: callee-subsets
  namespace: grpc-mesh-demo
spec:
  host: callee.grpc-mesh-demo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: callee-grpc
  namespace: grpc-mesh-demo
spec:
  hosts:
  - callee.grpc-mesh-demo.svc.cluster.local
  http:
  - match:
    - headers:
        content-type:
          prefix: "application/grpc"
    route:
    - destination:
        host: callee.grpc-mesh-demo.svc.cluster.local
        subset: v1
        port:
          number: 50051
